--- a/index.html
+++ b/index.html
@@ -263,6 +263,27 @@
             .copyright:hover{
                 opacity: 1;
             }
+            /* 媒体查询 */
+            @media (max-width: 768px) {
+                .alert_box {
+                    width: 90%;
+                    height: auto;
+                    box-shadow: 0px 0px 16px 1px rgba(255,255,255,0.5);
+                }
+                .alert_title{
+                    font-size: 30px;
+                    color: #FFFFFF;
+                    text-shadow: 0px 0px 24px #FFFFFF;
+                    user-select: none;
+                }
+                .alert_text_items{
+                    padding: 5px 0px;
+                    font-size: 18px;
+                    color: #FFFFFF;
+                    text-align: left;
+                    z-index: 100;
+                }
+            }
         </style>
         <!-- 导入指令 -->
         <script src="./command/command.js"></script>
